Updates logging, json output and tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ universal=1
 [metadata]
 description-file = README.md
 
-[pytest]
+[tool:pytest]
 flakes-ignore =
     __init__.py UnusedImport
     _compat.py UnusedImport
